Rewrite Java 16, Kartendeck und InfoPanel richtig geupdated